--- a/src/components/Footer/Footer(mobile).css
+++ b/src/components/Footer/Footer(mobile).css
@@ -1,4 +1,4 @@
-.footer_mobile {
+/* .footer_mobile {
     display: none;
     position: fixed;
     bottom: 0;
@@ -51,6 +51,5 @@
     width: 100%;
     text-align: center;
     font-size: 10px;
-
     font-weight: 400;
-}
+} */
