--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -3,19 +3,6 @@
     position: relative;
 }
 
-
-/* 
-.edditIcon{
-    position: absolute;
-    z-index: 3;
-    top: 60px;
-    left: 30px;
-    width: 30px;
-    height: 30px;
-    background: url(./img/pencilWhite.svg) no-repeat;
-    background-size: 30px 30px;
-} */
-
 .driverProfileBasicInformationBodyTopImg {
     position: absolute;
     z-index: 2;
@@ -68,7 +55,7 @@
     height: 55px;
     border-bottom: 1px solid #ccc;
     line-height: 55px;
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 .driverProfileBasicInformationBodyBottomHeader p {
@@ -77,7 +64,7 @@
     font-size: 16px;
     background: url(./img/editBlue.svg) no-repeat;
     background-size: 20px 20px;
-    background-position: top 15px left 190px;
+    background-position: top 15px left 210px;
     cursor: pointer;
 }
 
@@ -85,7 +72,9 @@
     color: #999;
     font-weight: 500;
     font-size: 14px;
-    margin: 0;
+    margin: 5px 0;
+    min-height: 40px;
+    line-height: 40px;
 }
 
 .driverProfileBasicInformationBodyBottomContent input {
@@ -95,13 +84,15 @@
     border-radius: 5px;
     border: 1px solid #ccc;
     padding-left: 10px;
-    max-width: 400px;
     min-height: 40px;
+    margin: 5px 0;
+    transition: all 0.3s;
 }
 
-.driverProfileBasicInformationBodyBottomContent :nth-child(6) input {
+
+/* .driverProfileBasicInformationBodyBottomContent :nth-child(6) input {
     max-width: 195px;
-}
+} */
 
 .driverProfileBasicInformationBodyBottomContent input::placeholder {
     color: #333;
@@ -121,7 +112,7 @@
 }
 
 .driverProfileBasicInformationBodyBottomContent select {
-    max-width: 130px;
+    width: 33.3%;
     min-height: 40px;
     background: none;
     border: 1px solid #ccc;
@@ -129,29 +120,34 @@
     color: #333;
     font-weight: 400;
     font-size: 14px;
-    margin-right: 5px;
     padding-left: 10px;
     cursor: pointer;
     appearance: none;
     background: url(./img/arrow-point-to-down.svg) no-repeat;
     background-size: 8px 8px;
     background-position: top 15px right 10px;
+    margin: 5px 0;
+    transition: all 0.3s;
 }
 
-.driverProfileBasicInformationBodyBottomContent :nth-child(6) select {
+
+/* .driverProfileBasicInformationBodyBottomContent :nth-child(6) select {
     max-width: 195px;
     margin-right: 10px;
-}
+} */
 
-.driverProfileBasicInformationBodyBottomContent :nth-child(7) select {
+
+/* .driverProfileBasicInformationBodyBottomContent :nth-child(2) :nth-child(7) {
     max-width: 400px;
-}
+} */
 
 .driverProfileBasicInformationBodyBottomContent textarea {
-    max-width: 400px;
+    margin: 5px 0;
     min-height: 150px;
     border-radius: 5px;
     padding-left: 10px;
+    border: 1px solid #ccc;
+    transition: all 0.3s;
 }
 
 .driverProfileBasicInformationBodyBottomContent button {
@@ -164,6 +160,7 @@
     border-radius: 5px;
     border: none;
     transition: all 0.3s;
+    margin: 10px 0;
 }
 
 .driverProfileBasicInformationBodyBottomContent button:hover {
@@ -173,3 +170,29 @@
 .driverProfileBasicInformationBodyBottomContent button:focus {
     outline: none;
 }
+
+@media (max-width: 768px) {
+    .driverProfileBasicInformationBodyBottom {
+        box-shadow: none;
+    }
+    .driverProfileBasicInformationBodyBottomContent input,
+    .driverProfileBasicInformationBodyBottomContent select,
+    .driverProfileBasicInformationBodyBottomContent textarea {
+        border: none;
+        border-bottom: 1px solid #ccc;
+    }
+    .driverProfileBasicInformationBodyBottomContent textarea:hover,
+    .driverProfileBasicInformationBodyBottomContent textarea:focus,
+    .driverProfileBasicInformationBodyBottomContent select:hover,
+    .driverProfileBasicInformationBodyBottomContent select:focus,
+    .driverProfileBasicInformationBodyBottomContent input:hover,
+    .driverProfileBasicInformationBodyBottomContent input:focus {
+        border-color: #304269;
+        border-width: 2px;
+        text-decoration: none;
+        outline: #304269;
+        border-radius: 0px;
+    }
+}
+
+@media (max-width: 576px) {}
