--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -2,7 +2,7 @@
     line-height: 40px;
     margin-top: 40px;
     margin-bottom: 30px;
-    /* нужно будет удалить */
+    overflow: hidden;
     border-bottom: 1px solid #ccc;
 }
 
@@ -11,7 +11,6 @@
     height: 40px;
     margin-right: 30px;
     transition: all 0.3s;
-    
     font-weight: 400;
     font-size: 16px;
     color: #304269;
