--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -3,8 +3,7 @@
     background-size: cover;
 }
 
-.home_header {
-}
+.home_header {}
 
 .home_block {
     max-width: 1200px;
@@ -30,14 +29,12 @@ div.homeBottomIcomRout {
 
 .homeBottomTitle {
     color: #304269;
-
     font-weight: 500;
     font-size: 20px;
 }
 
 h2.homeBottomTitle {
     color: #304269;
-
     font-weight: 500;
     font-size: 18pt;
     margin-top: 50px;
@@ -46,14 +43,12 @@ h2.homeBottomTitle {
 
 .homeBottomTitle span {
     color: #304269;
-
     font-weight: 100;
     font-size: 20px;
 }
 
 .homeBottomText {
     color: #304269;
-
     font-weight: 400;
     font-size: 12px;
 }
@@ -62,7 +57,6 @@ h2.homeBottomTitle {
     border: 1px solid #f60;
     border-radius: 5px;
     color: #f60;
-
     font-weight: 500;
     font-size: 11.25pt;
     padding: 16px 65px 16px 66px;
@@ -116,7 +110,6 @@ h2.homeBottomTitle {
     background: #304269 !important;
     color: #fff;
     border-color: #304269 !important;
-
     font-weight: 400;
     font-size: 15px;
 }
@@ -133,7 +126,6 @@ h2.homeBottomTitle {
 .homeSubscribeInput {
     border: 1px solid #304269 !important;
     color: #999 !important;
-
     font-weight: 400;
     font-size: 18px;
 }
@@ -144,28 +136,24 @@ h2.homeBottomTitle {
 
 .homeSubscribe h2 {
     color: #333;
-
     font-weight: 500;
     font-size: 34px;
 }
 
 .homeSubscribe span {
     color: #333;
-
     font-weight: 400;
     font-size: 16px;
 }
 
 .homeSubscribe p {
     color: #999;
-
     font-weight: 400;
     font-size: 12px;
 }
 
 .homeSubscribe p a {
     color: #304269;
-
     font-weight: 400;
     font-size: 12px;
 }
