--- a/src/components/home/HomeBody/calendary.css
+++ b/src/components/home/HomeBody/calendary.css
@@ -8,7 +8,8 @@
     border: none;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.705);
 }
-.calendary_drivers_position{
+
+.calendary_drivers_position {
     position: absolute;
     top: 0px;
     width: 350px;
@@ -17,7 +18,8 @@
     color: #ffffff;
     font-size: 16px;
 }
-.react-calendar__navigation{
+
+.react-calendar__navigation {
     padding-top: 20px;
 }
 
@@ -25,47 +27,50 @@
     background-color: red;
 }
 
-.react-calendar__month-view__weekdays__weekday{
-
+.react-calendar__month-view__weekdays__weekday {
     font-weight: 500;
 }
 
-.react-calendar__navigation__label{
+.react-calendar__navigation__label {
     padding: 0px;
     color: #fff;
-
     font-weight: 500;
 }
 
-.react-calendar__navigation__arrow, .react-calendar__navigation__next-button{
+.react-calendar__navigation__arrow,
+.react-calendar__navigation__next-button {
     padding: 0px;
     min-width: 30px !important;
 }
 
-.react-calendar__navigation__arrow{
+.react-calendar__navigation__arrow {
     color: #fff;
 }
-.react-calendar__navigation button:enabled:hover, .react-calendar__navigation button:enabled:focus{
+
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
     background: #304269;
     cursor: pointer;
 }
 
-.abbr[data-original-title], abbr[title]{
+.abbr[data-original-title],
+abbr[title] {
     cursor: pointer;
 }
 
-.react-calendar__tile, .react-calendar__month-view__days__day{
-
+.react-calendar__tile,
+.react-calendar__month-view__days__day {
     font-weight: 500;
     font-size: 14px !important;
     color: #f60;
 }
 
-.react-calendar__tile{
+.react-calendar__tile {
     border-radius: 5px;
 }
 
-.react-calendar__tile:enabled:hover, .react-calendar__tile:enabled:focus{
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
     background: #f60;
     border-radius: 5px;
 }
@@ -73,7 +78,6 @@
 .react-calendar__month-view__weekdays__weekday abbr {
     color: #f60;
     font-size: 16px;
-
     font-weight: 400;
     text-decoration: none;
 }
