--- a/src/components/stars/Stars.css
+++ b/src/components/stars/Stars.css
@@ -1,24 +1,20 @@
-
 .infoBlock_starsBlock {
     position: relative;
     align-items: center;
-    font-size: 9pt;
+    font-size: 12px;
     height: 15px;
 }
 
 .infoBlock_starsBlock_value {
-
     font-weight: 500;
     height: 100%;
     max-width: 20px;
     font-size: 14px;
-
     font-weight: 600;
     color: #ff6600;
     line-height: 17px;
     margin: auto 5px auto 0;
 }
-
 
 .infoBlock_starsBlock_stars {
     align-items: center;
@@ -29,7 +25,7 @@
 .starsBlock_stars_element {
     position: relative;
     width: 16px;
-    height: 18px;   
+    height: 18px;
     z-index: 1;
 }
 
@@ -38,7 +34,6 @@
     width: 90%;
     height: 14px;
     margin-top: 2px;
-    
 }
 
 .infoBlock_starsBlock_stars img {
