--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -31,24 +31,19 @@
 }
 
 .driverProfileCarFilledCardInformationNameCar {
+    position: absolute;
+    z-index: 3;
     min-height: 45px;
     padding: 0 15px;
     padding-right: 0px;
-}
-
-.driverProfileCarFilledCardInformationNameCar p {
-    font-family: "Roboto";
-    font-weight: 500;
-    font-size: 16px;
-    color: #304269;
-    margin-bottom: 0px;
+    background: none;
 }
 
 .cardInformationNameCarIcon {
     width: 40px;
     height: 45px;
-    background: url(./img/moreGray.svg) no-repeat;
-    background-size: 17px 16px;
+    background: url(./img/moreWhite.svg) no-repeat;
+    background-size: 20px 20px;
     background-position: top 15px right 10px;
     cursor: pointer;
     transition: all 0.3s;
@@ -57,7 +52,7 @@
 
 .cardInformationNameCarIcon:hover {
     background: url(./img/moreOrange.svg) no-repeat;
-    background-size: 17px 16px;
+    background-size: 20px 20px;
     background-position: top 15px right 10px;
 }
 
@@ -72,7 +67,7 @@
 .driverProfileCarFilledCardInformationMenu {
     display: none;
     position: absolute;
-    top: 35px;
+    top: 40px;
     right: 0px;
     z-index: 3;
     height: 70px;
@@ -85,16 +80,30 @@
 }
 
 .cardInformationType {
-    padding: 15px;
-    padding-bottom: 0px;
+    padding: 15px 10px;
 }
 
 .cardInformationType p {
     font-family: "Roboto";
+    font-weight: 500;
+    font-size: 16px;
+    color: #304269;
+    margin-bottom: 0px;
+}
+
+.cardInformation p,
+.cardInformation span {
+    font-family: "Roboto";
     font-weight: 400;
     font-size: 14px;
-    color: #666;
-    padding-right: 5px;
+    color: #304269;
+}
+
+.cardInformation p {
+    padding-left: 35px;
+    background: no-repeat;
+    background-size: 30px 30px;
+    background-position: left 2px bottom -2px;
 }
 
 p.driverProfileCarFilledCardInformationDeleteCar,
@@ -233,7 +242,7 @@ p.driverProfileCarFilledCardInformationNameCarEdit:hover {
 }
 
 .driverProfileCarAddNewCarShowButton {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     min-width: 250px;
 }
 
@@ -354,6 +363,29 @@ p.driverProfileCarFilledCardInformationNameCarEdit:hover {
         outline: #304269;
         border-radius: 0px;
     }
+    .driverProfileCarAddNewCarPhotoCar {
+        max-width: 400px;
+        max-height: 100%;
+        min-width: 305px;
+        min-height: 200px;
+        margin-right: 0px;
+    }
+    .driverProfileCarAddNewCarPhotoCarImg {
+        max-width: 400px;
+        max-height: 100%;
+    }
 }
 
-@media (max-width: 576px) {}
+@media (max-width: 576px) {
+    .driverProfileCarAddNewCarPhotoCar {
+        max-width: 100%;
+        max-height: 100%;
+        min-width: 305px;
+        min-height: 200px;
+        margin-right: 0px;
+    }
+    .driverProfileCarAddNewCarPhotoCarImg {
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
