--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -27,8 +27,15 @@
 /* Content Bigin */
 
 .driverProfileTripSettingsTourContent div {
+    position: relative;
     min-height: 40px;
     margin-bottom: 15px;
+    width: 100%;
+}
+
+.driverProfileTripSettingsTourContent .driverProfileTripSettingsContentDeletButton {
+    position: absolute;
+    left: 100%;
 }
 
 .driverProfileTripSettingsTourContent p {
@@ -53,6 +60,7 @@
 }
 
 .driverProfileTripSettingsTourContent input {
+    width: 100%;
     color: #333;
     font-family: "Roboto";
     font-weight: 400;
@@ -60,13 +68,91 @@
     border-radius: 5px;
     border: 1px solid #ccc;
     padding-left: 10px;
-    min-width: 130px;
     min-height: 40px;
+    transition: all 0.3s;
 }
 
+
+/* TourContentCheckbox Bigin */
+
+div.driverProfileTripSettingsTourContentCheckbox {
+    position: relative;
+    width: 20px;
+}
+
+.driverProfileTripSettingsTourContentCheckbox label {
+    /* background: #25ae88; */
+    position: relative;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    color: #333;
+    padding-left: 28px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.driverProfileTripSettingsTourContentCheckbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.driverProfileTripSettingsTourContentCheckbox span {
+    position: absolute;
+    z-index: 3;
+    top: 7px;
+    left: 2px;
+    height: 18px;
+    width: 18px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    transition: all 0.3s;
+}
+
+.driverProfileTripSettingsTourContentCheckbox label:hover span {
+    border-color: #25ae88;
+}
+
+.driverProfileTripSettingsTourContentCheckbox input:checked~span {
+    background-color: #25ae88;
+}
+
+.driverProfileTripSettingsTourContentCheckbox span:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.driverProfileTripSettingsTourContentCheckbox label input:checked~span:after {
+    display: block;
+}
+
+.driverProfileTripSettingsTourContentCheckbox label span:after {
+    left: 6px;
+    top: 3px;
+    width: 5px;
+    height: 8px;
+    border: solid #fff;
+    border-width: 0 1px 1px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+
+/* TourContentCheckbox End */
+
 .driverProfileTripSettingsTourContent select {
-    max-width: 400px;
+    width: 33.3%;
     min-height: 40px;
+    margin-right: 5px;
+    padding-left: 10px;
     background: none;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -74,13 +160,12 @@
     font-family: "Roboto";
     font-weight: 400;
     font-size: 14px;
-    margin-right: 5px;
-    padding-left: 10px;
     cursor: pointer;
     appearance: none;
     background: url(./img/arrow-point-to-down.svg) no-repeat;
     background-size: 8px 8px;
     background-position: top 15px right 10px;
+    transition: all 0.3s;
 }
 
 .driverProfileTripSettingsTourContent textarea:hover,
@@ -95,11 +180,12 @@
 }
 
 .driverProfileTripSettingsTourContent textarea {
-    min-width: 400px;
-    max-height: 150px;
+    width: 100%;
+    max-height: 75px;
     border-radius: 5px;
     padding-left: 10px;
     border: 1px solid #ccc;
+    transition: all 0.3s;
 }
 
 .tourContentAdd p {
@@ -144,5 +230,42 @@
 
 /* ItemElement Bigin */
 
+.SettingsTourHeader p {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 14px;
+    color: #666;
+}
+
 
 /* ItemElement End */
+
+@media (max-width: 768px) {
+    .driverProfileTripSettingsTourContent textarea,
+    .driverProfileTripSettingsTourContent input,
+    .driverProfileTripSettingsTourContent select {
+        border: none;
+        border-bottom: 1px solid #ccc;
+    }
+    .driverProfileTripSettingsTourContent textarea:hover,
+    .driverProfileTripSettingsTourContent textarea:focus,
+    .driverProfileTripSettingsTourContent select:hover,
+    .driverProfileTripSettingsTourContent select:focus,
+    .driverProfileTripSettingsTourContent input:hover,
+    .driverProfileTripSettingsTourContent input:focus {
+        border-color: #304269;
+        border-width: 2px;
+        text-decoration: none;
+        outline: #304269;
+        border-radius: 0px;
+    }
+    .driverProfileTripSettingsContentDeletButton {
+        text-align: right;
+    }
+    .driverProfileTripSettingsTourContent .driverProfileTripSettingsContentDeletButton {
+        position: relative;
+        left: 0;
+    }
+}
+
+@media (max-width: 576px) {}
